fixed page loading issues: image too large

--- a/src/components/Advantage.css
+++ b/src/components/Advantage.css
@@ -4,7 +4,7 @@
 }
 
 .Advantage-background {
-  min-height: 1000px;
+  min-height: 500px;
   width: 100%;
   background-color: #002035;
 }
@@ -33,6 +33,8 @@
   justify-content: space-between;
   align-items: center;
   min-width: 60%;
+  padding: 5px;
+  margin: 10px;
 }
 
 /*
@@ -49,6 +51,7 @@
 }
 
 .Advantage-column-text {
+  flex-flow: column;
   max-width: 300px;
   display: flex;
   margin: 15px;
