--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -17,7 +17,7 @@
   min-height: 300px;
   width: 80%;
   z-index: +1;
-  margin-top: -50px;
+  margin-top: -100px;
   margin-bottom: 50px;
 }
 
